[package]
name = "statusline"
version = "0.1.0"
edition = "2021"
description = "Claude Code statusline — context/5h/7d/model display plus fable weekly usage via OAuth usage API"

[[bin]]
name = "statusline"
path = "src/main.rs"

[dependencies]
serde_json = { version = "1", default-features = false, features = ["std"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
# fable 週間使用量の取得に用いる HTTP クライアント。TLS (rustls) のみ有効化する。
ureq = { version = "2", default-features = false, features = ["tls"] }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
